--- a/nill-dl/assets/css/style.css
+++ b/nill-dl/assets/css/style.css
@@ -1473,7 +1473,7 @@ body.nill-dark {
 }
 
 .nill-dark .text-dark {
-  color: #f4f4f4 !important;
+  color: #000000 !important;
 }
 
 .nill-dark a.text-dark:hover {
